Translated to English / Angliskotas izmaiņas
One of the first steps to make this as a public plugin

--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-#rakstu-serija {
-
-
+#series-of-posts {
 float: right;
 position: relative;
 background: #fbfaf5 url('linijas.png') repeat-y top left;
@@ -8,23 +6,20 @@ width: 280px;
 z-index: 10;
 margin: -20px -40px 20px 40px; 
 height: auto;
-
+padding:20px 10px 10px 10px;
 border:1px solid #eee;
 list-style:none;
 -webkit-box-shadow: 2px 2px 3px 0px #a7a7a7;
 -moz-box-shadow: 2px 2px 3px 0px #a7a7a7;
 box-shadow: 2px 2px 3px 0px #a7a7a7; 
-
-padding:20px 10px 10px 10px;
-
 }
 
-#rakstu-serija .viena-serija {
+#series-of-posts .one-series {
 margin-bottom: 10px;
 font-weight: bold;
 }
 
-#rakstu-serija .viena-saite {
+#series-of-posts .one-link {
 margin-bottom: 5px;
 line-height: normal;
 font-size: 14px;
