Changed plugin name

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#series-of-posts {
+#series-of-posts-box {
 float: right;
 position: relative;
 background: #fbfaf5 url('lines.png') repeat-y top left;
